--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "json-server": "^0.17.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
