--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "epayco-sdk-node": "^1.2.3",
     "express": "^4.18.2",
     "json-server": "^0.17.3",
     "jsonwebtoken": "^9.0.2",
