--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.3",
     "json-server": "^0.17.3",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.0.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.7",
     "nodemon": "^2.0.22",
