--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vercel/postgres": "^0.5.1",
+    "@react-oauth/google": "^0.11.1",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "epayco-sdk-node": "^1.2.3",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "google-auth-library": "^9.2.0",
     "json-server": "^0.17.3",
     "jsonwebtoken": "^9.0.2",
     "mercadopago": "^1.5.17",
@@ -27,8 +26,6 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0"
