--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "npm-run-all": "^4.1.5",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "qrcode": "^1.5.3",
     "sequelize": "^6.33.0"
   }
 }
